[package]
name = "play-polaris"
version = "1.1.0"
edition = "2024"
description = "An interactive terminal-based application for exploring and learning about constellations."
keywords = ["tui", "game", "constellations", "astronomy", "educational"]
license = "MIT"
categories = ["games"]
repository = "https://github.com/pchryss/Polaris"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
dirs = "6.0.0"
rand = "0.9.2"
ratatui = "0.29.0"
serde = {version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
